test/fail/where-block.grace
method name where { x : Object -> } <: { x : None -> } {}

name
